force-app/main/default/objects/Refund__c/Refund__c.object-meta.xml
<CustomObject>
    <description>This object is used to store the refund amount details against a transaction.</description>
    <label>Refund</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Refund ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refunds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>