force-app/main/default/objects/Refund__c/fields/Credit_Check_Reference_field__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Reference_field__c</fullName>
    <label>Credit/Check Reference field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>