force-app/main/default/objects/Refund__c/fields/Issued_User__c.field-meta.xml
<CustomField>
    <fullName>Issued_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issued User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Refunds1</relationshipName>
    <type>Lookup</type>
</CustomField>