force-app/main/default/objects/Refund__c/fields/Master_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Master_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Transaction</label>
    <referenceTo>Payment_Transaction__c</referenceTo>
    <relationshipLabel>Refunds</relationshipLabel>
    <relationshipName>Refunds</relationshipName>
    <type>Lookup</type>
</CustomField>