force-app/main/default/objects/Refund__c/fields/Payment_Information__c.field-meta.xml
<CustomField>
    <fullName>Payment_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Information</label>
    <referenceTo>Payment_Information__c</referenceTo>
    <relationshipLabel>Refunds</relationshipLabel>
    <relationshipName>Refunds</relationshipName>
    <type>Lookup</type>
</CustomField>