force-app/main/default/objects/Refund__c/fields/Prior_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Prior_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prior Transaction</label>
    <referenceTo>Transactions__c</referenceTo>
    <relationshipLabel>Refunds (Prior Transaction)</relationshipLabel>
    <relationshipName>Refunds1</relationshipName>
    <type>Lookup</type>
</CustomField>