force-app/main/default/objects/Refund__c/fields/Reason_for_Refund__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Refund__c</fullName>
    <label>Reason for Refund</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Reason</fullName>
            </value>
            <value>
                <fullName>Price Adjustment</fullName>
            </value>
            <value>
                <fullName>Post-Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>