force-app/main/default/objects/Refund__c/fields/Requested_User__c.field-meta.xml
<CustomField>
    <fullName>Requested_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Refunds</relationshipName>
    <type>Lookup</type>
</CustomField>