force-app/main/default/objects/Refund__c/fields/Transactions__c.field-meta.xml
<CustomField>
    <fullName>Transactions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issued Transactions</label>
    <referenceTo>Transactions__c</referenceTo>
    <relationshipLabel>Refunds</relationshipLabel>
    <relationshipName>Refunds</relationshipName>
    <type>Lookup</type>
</CustomField>