force-app/main/default/objects/Refund__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Mode_of_Payment__c</columns>
    <columns>Reason_for_Refund__c</columns>
    <columns>Refund_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Master_Transaction__c</columns>
    <columns>Status__c</columns>
    <columns>Payment_Information__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>